--- a/ts-client/package.json
+++ b/ts-client/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@mercurial-finance/dynamic-amm-sdk",
+  "name": "@0xunreal/dynamic-amm-sdk",
   "version": "0.4.22",
   "description": "Mercurial Vaults SDK is a typescript library that allows you to interact with Mercurial v2's AMM.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc -p tsconfig.build.json && tsc -p tsconfig.esm.json",
+    "build": "pnpm rimraf dist && tsc -p tsconfig.build.json && tsc -p tsconfig.esm.json",
     "test": "jest ./src/amm/tests/*.test.ts --runInBand --setupFiles dotenv/config",
     "test-snapshot": "jest ./src/amm/tests/snapshot.test.ts --runInBand"
   },
@@ -13,16 +13,16 @@
     "dist"
   ],
   "dependencies": {
-    "@solana/buffer-layout": "4.0.0",
-    "@mercurial-finance/vault-sdk": "0.5.3",
+    "@0xunreal/vault-sdk": "0.5.3",
     "@project-serum/anchor": "0.24.2",
     "@project-serum/borsh": "^0.2.5",
     "@saberhq/anchor-contrib": "1.13.32",
     "@saberhq/stableswap-sdk": "1.13.32",
     "@saberhq/token-utils": "1.13.32",
-    "@solana/spl-token": "0.1.8",
-    "@solana/spl-token-registry": "0.2.1105",
-    "@solana/web3.js": "^1.42.0",
+    "@solana/buffer-layout": "4.0.0",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/spl-token-registry": "^0.2.1105",
+    "@solana/web3.js": "^1.91.6",
     "bn-sqrt": "^1.0.0",
     "bn.js": "5.2.1",
     "decimal.js": "^10.4.1",
@@ -40,9 +40,10 @@
     "chai": "^4.3.6",
     "jest": "^28.1.0",
     "mocha": "^10.0.0",
+    "rimraf": "^5.0.7",
     "ts-jest": "^28.0.2",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.7.2"
+    "typescript": "^5.5.2"
   },
   "peerDependencies": {
     "@solana/buffer-layout": "^3 || ^4"
