--- a/ts-client/package.json
+++ b/ts-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0xunreal/dynamic-amm-sdk",
-  "version": "0.4.23",
+  "version": "0.4.24",
   "description": "Mercurial Vaults SDK is a typescript library that allows you to interact with Mercurial v2's AMM.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -13,14 +13,14 @@
     "dist"
   ],
   "dependencies": {
-    "@0xunreal/vault-sdk": "0.5.3",
+    "@0xunreal/vault-sdk": "0.5.5",
     "@project-serum/anchor": "0.24.2",
     "@project-serum/borsh": "^0.2.5",
     "@saberhq/anchor-contrib": "1.13.32",
     "@saberhq/stableswap-sdk": "1.13.32",
     "@saberhq/token-utils": "1.13.32",
     "@solana/buffer-layout": "4.0.0",
-    "@solana/spl-token": "^0.4.6",
+    "@solana/spl-token": "^0.4.7",
     "@solana/spl-token-registry": "^0.2.1105",
     "@solana/web3.js": "^1.91.6",
     "bn-sqrt": "^1.0.0",
@@ -68,5 +68,6 @@
   "bugs": {
     "url": "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk/issues"
   },
-  "homepage": "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk#readme"
+  "homepage": "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk#readme",
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
